# 6dof-cobot-project

./: README.md
cobot_control/: CMakeLists.txt  package.xml
cobot_control/config/: cobat_controller.yaml
cobot_controller/: CMakeLists.txt  package.xml
cobot_controller/include/cobot_controller/: cobot_controller.hpp
cobot_controller/src/: cobot_controller.cpp
cobot_description/: CMakeLists.txt  package.xml
cobot_description/urdf/: base.urdf.xacro  cobot.urdf  finger.urdf.xacro  gripper.urdf.xacro  part-1.urdf.xacro  part-2.urdf.xacro  part-3.urdf.xacro  part-4.urdf.xacro  part-5.urdf.xacro  part-6.urdf.xacro  ros2_control.xacro
cobot_gazebo/: CMakeLists.txt  package.xml
cobot_gazebo/launch/: gazebo.launch.py
cobot_gazebo/world/: cobot_world.world
cobot_gui/: package.xml  setup.cfg  setup.py
cobot_gui/cobot_gui/: gui_app.py
cobot_gui/cobot_gui/resources/: style.qss
cobot_interfaces/: CMakeLists.txt  package.xml
cobot_interfaces/action/: InverseKinematic.action
cobot_kinematics_plugin/: CMakeLists.txt  cobot_kinematics_plugin_description.xml  package.xml
cobot_kinematics_plugin/include/cobot_kinematics_plugin/: cobot_kinematics_plugin.hpp
cobot_kinematics_plugin/src/: cobot_kinematics_plugin.cpp
cobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cobot_moveit_config/config/: joint_limits.yaml  kinematics.yaml  main.srdf  moveit_controllers.yaml  ros2_controllers.yaml
cobot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
