<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_control</name>
  <version>1.0.0</version>
  <description>
    ROS 2 Control configuration files and hardware interface parameters for Cobot Pro.
  </description>

  <maintainer email="salimsamet@example.com">Salim Samet Kotaş</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
