<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_controller</name>
  <version>1.0.0</version>
  <description>
    Custom C++ controller plugin for Cobot Pro.
  </description>

  <maintainer email="salimsamet@example.com">Salim Samet Kotaş</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>rclcpp_action</depend>
  
  <depend>cobot_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
