<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_gui</name>
  
  <version>1.0.0</version>
  
  <description>
    Professional PyQt5-based control interface for the 6-DOF Cobot Pro.
    Features real-time MoveIt 2 integration, singularity analysis, safety limits,
    and live Gazebo camera feed visualization.
  </description>

  <maintainer email="salimsamet@example.com">Salim Samet Kotaş</maintainer>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <depend>moveit_msgs</depend>
  <depend>action_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <depend>cv_bridge</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  
  <depend>cobot_interfaces</depend>

  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
