<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_kinematics_plugin</name>
  <version>1.0.0</version>
  <description>
    Custom Kinematics Plugin (IKFast/Analytical) for 6-DOF Cobot Pro.
  </description>

  <maintainer email="salimsamet@example.com">Salim Samet Kotaş</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>tf2</depend>
  <depend>tf2_kdl</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <moveit_core plugin="${prefix}/cobot_kinematics_plugin_description.xml"/>
  </export>
</package>
