<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_moveit_config</name>
  <version>1.0.0</version>
  
  <description>
    MoveIt 2 configuration package for the 6-DOF Cobot Pro.
    Includes semantic description (SRDF), kinematics setup, and launch files
    integrated with Gazebo and custom controllers.
  </description>

  <maintainer email="salimsamet@example.com">Salim Samet Kotaş</maintainer>
  <author email="salimsamet@example.com">Salim Samet Kotaş</author>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <exec_depend>cobot_description</exec_depend>
  <exec_depend>cobot_gazebo</exec_depend>
  <exec_depend>cobot_control</exec_depend>
  
  <exec_depend>cobot_kinematics_plugin</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
